add application test file

--- a/backendserviceonecapp/serviceonec/src/main/resources/application-dev.yaml
+++ b/backendserviceonecapp/serviceonec/src/main/resources/application-dev.yaml
@@ -36,9 +36,8 @@ spring:
 
   # Настройки логирования
   logging:
-#    config: "classpath:log4j2.xml"
     level:
-      com.example.demo: DEBUG                    # Уровень логирования нашего приложения
+      com.example.serviceonec: DEBUG                    # Уровень логирования нашего приложения
       org.springframework.web: INFO
       org.hibernate: WARN                        # Hibernate логи только предупреждения и ошибки
       org.hibernate.SQL: DEBUG                   # SQL логи (только для отладки)
@@ -47,6 +46,6 @@ spring:
       console: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"  # Формат логов
       file: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
     file:
-      name: logs/serviceonec-app.log                    # Файл логов
+      name: logs/service_one_c.log                    # Файл логов
       max-size: 10MB                             # Максимальный размер файла лога
       max-history: 30
