--- a/backendserviceonecapp/serviceonec/src/main/resources/application-prod.yaml
+++ b/backendserviceonecapp/serviceonec/src/main/resources/application-prod.yaml
@@ -1,9 +1,9 @@
 spring:
 
   datasource:
-    url: ${DB_URL}
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
+    url: ${DB_URL:}
+    username: ${DB_USERNAME:}
+    password: ${DB_PASSWORD:}
     hikari:
       maximum-pool-size: ${DB_MAX_POOL_SIZE:20}
       minimum-idle: ${DB_MIN_IDLE:10}
@@ -19,6 +19,7 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         jdbc:
           batch_size: 50
+    show-sql: false
 
   liquibase:
     change-log: classpath:db/changelog/db.changelog-master.yaml
@@ -53,3 +54,10 @@ management:
   endpoint:
     health:
       show-details: never
+
+one-c:
+  odata-fin:
+    base-url: ${ONE_C_ODATA_BASE_URL:}
+    username: ${ONE_C_ODATA_USERNAME:}
+    password: ${ONE_C_ODATA_PASSWORD:}
+    one-c-guid: ${ONE_C_GUID}
