--- a/backendserviceonecapp/serviceonec/docker-compose.yml
+++ b/backendserviceonecapp/serviceonec/docker-compose.yml
@@ -2,8 +2,8 @@ services:
   postgres:
     image: postgres:15-alpine
     environment:
-      POSTGRES_DB: serviceonec_db
-      POSTGRES_USER: serviceonec_user
-      POSTGRES_PASSWORD: serviceonec_password
+      POSTGRES_DB: db
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
     ports:
       - "5433:5432"
