--- a/backendserviceonecapp/serviceonec/src/main/resources/application-prod.yaml
+++ b/backendserviceonecapp/serviceonec/src/main/resources/application-prod.yaml
@@ -62,3 +62,4 @@ one-c:
     password: ${ONE_C_ODATA_PASSWORD:}
     one-c-guid: ${ONE_C_GUID}
     one-c-guid-open: ${ONE_C_GUID_OPEN}
+    one-c-guid-defective: ${ONE_C_GUID_OPEN_DEFECTIVE}
